k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-api-deployment
  namespace: othmane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playlist-api
  template:
    metadata:
      labels:
        app: playlist-api
    spec:
      containers:
      - name: playlist-api
        image: quay.io/othmaneechchabi/playlist-api:3.0
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: shared-volume
          mountPath: /app/model
      imagePullSecrets:
      - name: quay-secret
      volumes:
      - name: shared-volume
        persistentVolumeClaim:
          claimName: project2-pvc-othmane
