k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playlist-api-service
  namespace: othmane
spec:
  selector:
    app: playlist-api
  ports:
    - protocol: TCP
      port: 52001       # External port (for cluster access)
      targetPort: 5000    # Container port
