k8s/web-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs401-web-client
  namespace: othmane
spec:
  type: ClusterIP
  selector:
    app: cs401-web-client
  ports:
    - port: 80
      targetPort: 80
